Fjerner loggestatements